SSC-1906 Quote request component display mobile - correction spacing after phone number field

--- a/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base/less/components/c-form.less
+++ b/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base/less/components/c-form.less
@@ -56,7 +56,7 @@
 
     .countrycode {
         position: relative;
-
+        height:58px;
         .flag-container {
             cursor: pointer;
         }
